# cangjie-fos

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX_TASKS.md  Dockerfile  README.md  TODO_LIST_PHASE2.md  TODO_LIST_PHASE3.md  TODO_LIST_PHASE4.md  TODO_LIST_PHASE5.md  TODO_LIST_PHASE6.md  build_frontend.ps1  dev-plan-dd-generate.md  docker-compose.yml  onboarding-for-colleague-ai.md  run_dev.ps1  start.bat  start.sh  一键启动_Docker版.bat  一键启动_Python版.bat  同事上手指南.md  填写API密钥_双击我.bat  安装并启动.ps1  快速开始.md  新同事接手指南.md  点击开始-仓颉FOS.bat  诊断_打不开请运行我.bat
backend/: .env.example  .gitignore  pyproject.toml
backend/bench/: dd_stress.py
backend/data/: institutions.sqlite  langgraph_npc.sqlite  langgraph_npc.sqlite-shm  langgraph_npc.sqlite-wal  npc_threads.sqlite
backend/src/cangjie_fos/: __init__.py  main.py
backend/src/cangjie_fos/adapters/: __init__.py  coach_memory_bridge.py  institution_coach_sync.py
backend/src/cangjie_fos/api/: __init__.py  router.py  upload_io.py
backend/src/cangjie_fos/core/: __init__.py  checkpointing.py  config.py  http_errors.py  job_semaphore.py  limits.py  paths.py  preflight.py  readiness.py  thread_sqlite.py
backend/src/cangjie_fos/engine/: __init__.py  asr_polish.py  asset_bridge.py  audio_preprocess.py  document_reader.py  growth_engine.py  investor_matcher.py  job_pipeline.py  language_detector.py  matchmaker.py  (+7 more)
backend/tests/: conftest.py  test_asset_bridge.py  test_asset_context.py  test_asset_health.py  test_asset_scan.py  test_assets_api.py  test_audio_service.py  test_auth.py  test_bug10_fixes.py  test_bug3_fixes.py  test_chat_log_ingestor.py  test_coach_keypoint_service.py  test_coach_score_service.py  test_coach_session_service.py  test_coaching_api_e2e.py  test_dd_bulk_50.py  test_dd_checklist_parser.py  test_dd_clarify.py  test_dd_content_extractor.py  test_dd_content_extractor_real.py  test_dd_e2e.py  test_dd_file_parser.py  test_dd_gk_api.py  test_dd_gk_export.py  test_dd_gk_password.py  test_dd_gk_scan.py  test_dd_l4_foundations.py  test_dd_match_quality.py  test_dd_material_architecture.py  test_dd_prefetch.py  test_dd_prompt_log.py  test_dd_qa_service.py  test_dd_redteam.py  test_dd_reflection.py  test_dd_robustness_p0.py  test_dd_scan_exclusions.py  test_dd_scan_perf.py  test_dd_stress_smoke.py  test_dd_v072.py  test_dd_workflow_stage.py  (+76 more)
(+248 files in other folders)
