[project]
name = "cangjie-fos-backend"
version = "0.1.0"
description = "仓颉 FOS — FastAPI + LangGraph 后端"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "langgraph>=0.2",
  "langgraph-checkpoint-sqlite>=2.0",
  "langchain-core>=0.3",
  "pydantic>=2",
  "python-dotenv>=1",
  "httpx>=0.27",
  "watchdog>=4",
  "openai>=1.0.0",
  "python-multipart>=0.0.9",
  "imageio-ffmpeg>=0.4",
  "jinja2>=3.1",
  "pandas>=3.0.2",
  "python-docx>=1.2.0",
  "structlog>=25.5.0",
  "apscheduler>=3.10",
  "pdfplumber>=0.11.9",
  "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
    "playwright>=1.59.0",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-playwright>=0.7.2",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# AI_Pitch_Coach/tests 已移除：engine/ 目录已包含所有核心模块，
# 单独克隆 cangjie-fos 即可运行全部测试，无需兄弟仓库。
testpaths = [
  "tests",
]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-q --ignore=tests/test_ui_smoke.py"
python_files = ["test_*.py", "*_test.py"]
markers = [
  "real_db: 测试使用 module/class 级 fixture 预写数据到真实 DB，跳过 _isolate_db_per_test 的临时 DB monkeypatch",
]
